# ARGO

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  agents.py  api_tester.py  auto_runner_evaluator.py  docker-compose.yml  evaluator.py  evaluator_complex.py  evaluator_plan.txt  main.py  pyproject.toml  requirements.txt  server.py  tasks.py
contracts/: Move.toml  Published.toml
contracts/scripts/: deploy_testnet.sh
contracts/sources/: guardian.move
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActionLog.tsx  AgentAnalyzer.tsx  BtcWidget.tsx  OnChainLog.tsx  RiskScore.tsx
frontend/src/hooks/: useAgentAnalysis.ts
frontend/src/lib/: suiClient.ts
nextui-dashboard/: .env.example  .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
nextui-dashboard/components/accounts/: index.tsx
nextui-dashboard/components/arg/: AgentAnalyzer.tsx  BtcWidget.tsx  CryptoSparklineWidget.tsx  OnChainLog.tsx  PriceCard.tsx  RiskScore.tsx  SuiWidget.tsx  TradeParameters.tsx
nextui-dashboard/components/charts/: steam.tsx
nextui-dashboard/components/layout/: layout.tsx
nextui-dashboard/hooks/: useAgentAnalysis.ts
nextui-dashboard/lib/: suiClient.ts
nextui-dashboard/pages/: _app.tsx  _document.tsx  index.tsx
nextui-dashboard/pages/api/: analyze.ts  (+5 more)
nextui-dashboard/styles/: globals.css
tools/: Binance_price_data_tool.py  Dune_analytics_onchain_tool.py  Scrapper_tool.py  SearchAIO.py  Search_n_Scraper_tool_DEPRECATED.py
(+16 files in other folders)
