[project]
name = "sui-analyst"
version = "0.1.0"
description = ""
authors = [
    {name = "Stelios Psaltis",email = "stlpslt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "crewai (>=1.14.5,<2.0.0)",
    "unstructured (>=0.22.29,<0.23.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "python-multipart (>=0.0.29,<0.0.30)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
